--- a/webapp/go/templates/memo.html
+++ b/webapp/go/templates/memo.html
@@ -22,7 +22,7 @@ Memo by {{ .Memo.Username }} ({{ .Memo.CreatedAt }})
 
 <hr>
 <div id="content_html">
-{{ gen_markdown .Memo.Content }}
+{{ gen_markdown .Memo.Content  .Memo.Id }}
 </div>
 
 {{ template "base_bottom" . }}
